feat: fully working connect